--- a/.prettierrc
+++ b/.prettierrc
@@ -1,20 +1,22 @@
 {
-  "printWidth": 100,
-  "semi": true,
-  "singleQuote": true,
-  "overrides": [
-    {
-      "files": ["**/*.css", "**/*.scss", "**/*.html"],
-      "options": {
-        "singleQuote": false
-      }
-    }
-  ],
-  "trailingComma": "all",
-  "bracketSpacing": false,
-  "arrowParens": "avoid",
-  "proseWrap": "never",
-  "htmlWhitespaceSensitivity": "strict",
-  "endOfLine": "lf",
-  "singleAttributePerLine": true
+	"printWidth": 100,
+	"semi": true,
+	"singleQuote": true,
+	"overrides": [
+		{
+			"files": ["**/*.css", "**/*.scss", "**/*.html"],
+			"options": {
+				"singleQuote": false
+			}
+		}
+	],
+	"tabWidth": 4,
+	"useTabs": true,
+	"trailingComma": "all",
+	"bracketSpacing": false,
+	"arrowParens": "avoid",
+	"proseWrap": "never",
+	"htmlWhitespaceSensitivity": "strict",
+	"endOfLine": "lf",
+	"singleAttributePerLine": true
 }
