--- a/package.json
+++ b/package.json
@@ -26,33 +26,34 @@
     "format": "npx prettier --write \"**/*.{js,mjs,cjs,ts,mts,cts,tsx,jsx,json}\""
   },
   "devDependencies": {
-    "eslint-plugin-react": "^7.32.2",
-    "eslint-plugin-react-hooks": "^4.6.0",
-    "eslint-plugin-react-refresh": "^0.4.3",
     "@types/node": "18.17.14",
     "@types/react": "^18.2.21",
     "@types/react-dom": "^18.2.7",
     "@typescript-eslint/eslint-plugin": "6.5.0",
     "@vitejs/plugin-react": "^4.0.4",
+    "babel-plugin-styled-components": "^2.1.4",
     "cross-env": "7.0.3",
     "electron": "26.1.0",
     "electron-builder": "24.6.4",
     "eslint": "8.48.0",
+    "eslint-config-prettier": "^9.0.0",
+    "eslint-plugin-react": "^7.32.2",
+    "eslint-plugin-react-hooks": "^4.6.0",
+    "eslint-plugin-react-refresh": "^0.4.3",
     "happy-dom": "10.11.2",
     "nano-staged": "0.8.0",
     "simple-git-hooks": "2.9.0",
     "typescript": "5.2.2",
     "unplugin-auto-expose": "0.0.5",
-    "vite": "4.4.9",
-    "babel-plugin-styled-components": "^2.1.4"
+    "vite": "4.4.9"
   },
   "dependencies": {
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "react-pageflip": "^2.0.3",
-    "electron-updater": "6.1.4",
     "@mui/icons-material": "^5.14.8",
     "@mui/material": "^5.14.8",
-    "@mui/styled-engine-sc": "^5.14.8"
+    "@mui/styled-engine-sc": "^5.14.8",
+    "electron-updater": "6.1.4",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "react-pageflip": "^2.0.3"
   }
 }
