--- a/packages/renderer/.eslintrc.json
+++ b/packages/renderer/.eslintrc.json
@@ -1,19 +1,21 @@
 {
-  "root": true,
-  "env": {"browser": true, "es2020": true},
-  "extends": [
-    "eslint:recommended",
-    "plugin:react/recommended",
-    "plugin:react/jsx-runtime",
-    "plugin:react-hooks/recommended"
-  ],
-  "parserOptions": {
-    "parser": "@typescript-eslint/parser",
-    "ecmaVersion": "latest",
-    "sourceType": "module"
-  },
-  "settings": {"react": {"version": "18.2"}},
-  "rules": {
-    "react-refresh/only-export-components": ["warn", {"allowConstantExport": true}]
-  }
+	"root": true,
+	"env": {"browser": true, "es2020": true},
+	"extends": [
+		"eslint:recommended",
+		"plugin:react/recommended",
+		"plugin:react/jsx-runtime",
+		"plugin:react-hooks/recommended"
+	],
+	"parserOptions": {
+		"parser": "@typescript-eslint/parser",
+		"ecmaVersion": "latest",
+		"sourceType": "module"
+	},
+	"settings": {"react": {"version": "18.2"}},
+	"rules": {
+		"react-refresh/only-export-components": "off",
+		"react/display-name": "off",
+		"react/prop-types": "off"
+	}
 }
