--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
     "@mui/material": "^5.14.8",
     "@mui/styled-engine-sc": "^5.14.8",
     "@snailycad/image-data-uri": "^3.2.0",
+    "@types/styled-components": "^5.1.28",
     "electron-updater": "6.1.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
