--- a/package.json
+++ b/package.json
@@ -48,11 +48,11 @@
     "vite": "4.4.9"
   },
   "dependencies": {
+    "@emotion/react": "^11.11.1",
+    "@emotion/styled": "^11.11.0",
     "@mui/icons-material": "^5.14.8",
-    "@mui/material": "^5.14.8",
-    "@mui/styled-engine-sc": "^5.14.8",
+    "@mui/material": "^5.14.12",
     "@snailycad/image-data-uri": "^3.2.0",
-    "@types/styled-components": "^5.1.28",
     "electron-updater": "6.1.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
