--- a/package.json
+++ b/package.json
@@ -56,6 +56,7 @@
     "electron-updater": "6.1.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-pageflip": "^2.0.3"
+    "react-pageflip": "^2.0.3",
+    "react-router-dom": "^6.16.0"
   }
 }
