--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "format": "npx prettier --write \"**/*.{js,mjs,cjs,ts,mts,cts,tsx,jsx,json}\""
   },
   "devDependencies": {
+    "@types/image-size": "^0.8.0",
     "@types/node": "18.17.14",
     "@types/react": "^18.2.21",
     "@types/react-dom": "^18.2.7",
@@ -54,6 +55,7 @@
     "@mui/material": "^5.14.12",
     "@snailycad/image-data-uri": "^3.2.0",
     "electron-updater": "6.1.4",
+    "image-size": "^1.0.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-pageflip": "^2.0.3",
